# soui_gn

./: README.md  ReadME
SOUI_gn/: .gn  BUILD.gn  SOUI.sublime-project  build.bat  build_debug.bat  build_static.bat  common.pri  copyres.bat  env.bat  gen.bat  genDebug.bat  gen_D.bat  gen_static.bat  gen_staticDebug.bat  junction_create.bat  junction_delete.bat  license.txt  package.py  package_static.py  post_build.bat  post_build_static.bat  readme.txt  setenv.bat  soui.pro  startVS.bat  startVS_Debug.bat  static_gen_D.bat
SOUI_gn/build_overrides/: build.gni  common.gni  precompile.h  readme.txt
SOUI_gn/buildtools/: GNRoadmap.docx  Using GN build.pptx  VsChromium.vsix  update.txt
SOUI_gn/buildtools/gn/: readme.txt
SOUI_gn/source/components/: components.pro
SOUI_gn/source/components/ScriptModule-LUA/: BUILD.gn  CMakeLists.txt  ScriptModule-LUA.pro
SOUI_gn/source/components/imgdecoder-gdip/: BUILD.gn  imgdecoder-gdip.h  imgdecoder-gdip.pro
SOUI_gn/source/components/imgdecoder-png/: BUILD.gn  decoder-apng.cpp  imgdecoder-png.h  imgdecoder-png.pro
SOUI_gn/source/components/imgdecoder-stb/: BUILD.gn  imgdecoder-stb.cpp  imgdecoder-stb.h  imgdecoder-stb.pro
SOUI_gn/source/components/imgdecoder-wic/: BUILD.gn  dllmain.cpp  imgdecoder-wic.pro  resource.h
SOUI_gn/source/components/log4z/: CMakeLists.txt  log4z.h  log4z.pro
SOUI_gn/source/components/render-gdi/: GradientFillHelper.cpp
SOUI_gn/source/components/render-skia/: BUILD.gn  Render-Skia2.cpp  drawtext-skia.h  render-skia.h  render-skia.pro  skia2rop2.cpp
SOUI_gn/source/components/resprovider-zip/: SResProviderZip.cpp  SResProviderZip.h  cursoricon.cpp
SOUI_gn/source/components/translator/: BUILD.gn  resource.h  translator.h  translator.pro
SOUI_gn/source/config/: com_gen.py  core-def.h
SOUI_gn/source/controls.extend/: SButtonEx.cpp  SCalendar2.cpp  SChatEdit.cpp  SChromeTabCtrl.cpp  SChromeTabCtrl.h  SFlyWnd.h  SFreeMoveWindow.cpp  SIECtrl.cpp  SListCtrlEx.cpp  SListboxex.cpp  SRadioBox2.h  SSkinImgFrame2.cpp
SOUI_gn/source/controls.extend/gif/: SAniImgFrame.h  SGifPlayer.cpp  SSkinGif.cpp
SOUI_gn/source/controls.extend/image3d/: 3dlib.cpp  3dmatrix.cpp  3dtransform.cpp
SOUI_gn/source/controls.extend/propgrid/: SPropertyItemBase.h
SOUI_gn/source/controls.extend/reole/: RichEditOle.h  dataobject.cpp
SOUI_gn/source/demos/: BUILD.gn  demos.pro
SOUI_gn/source/demos/360Preview/: 360Preview.cpp  360Preview.pro  MainDlg.cpp  readme.txt  resource.h
SOUI_gn/source/demos/360demo/: 360demo.cpp  360demo.pro  MainDlg.cpp  STabCtrl2.cpp
SOUI_gn/source/demos/PCManager/: PCManager.cpp  resource.h
SOUI_gn/source/demos/QQLogin/: BUILD.gn  GroupChatFrame.cpp  MainDlg.cpp  QQLogin.cpp  utils.cpp
SOUI_gn/source/demos/SoTool/: 2UnicodeHandler.cpp  BUILD.gn  CalcMd5Handler.cpp  CalcMd5Handler.h  CodeLineCounterHandler.cpp  FolderHander.cpp  FolderHander.h  FolderScanHandler.cpp  FolderScanHandler.h  ImageMergerHandler.cpp  ImageMergerHandler.h  MD5.cpp  MD5.h  MainDlg.cpp  SEdit2.cpp  SEdit2.h  SoTool.cpp  SoTool.pro  droptarget.h
SOUI_gn/source/demos/demo/: BUILD.gn  FormatMsgDlg.cpp  MainDlg.cpp  MemFlash.cpp  SMatrixWindow.h  SetSkinWnd.cpp  SetSkinWnd.h  SmileyCreateHook.cpp  SmileyCreateHook.h  demo.cpp  demo.pro  resource.h
SOUI_gn/source/demos/mclistview_demo/: BUILD.gn  ImportUires.bat  SSearchDropdownList.cpp  StudentSmsDlg.cpp  StudentSmsDlg.h  mclistview_demo.cpp  mclistview_demo.pro
SOUI_gn/source/demos/souispy/: MainDlg.cpp  MainDlg.h  SwndFrame.cpp  souispy.cpp  souispy.pro
SOUI_gn/source/samples/SoSmiley/: SoSmiley.rc  SoSmileyCtrl.cpp
SOUI_gn/source/samples/UIEditor/: FileHelper.h  MainDlg.cpp  NewFileDlg.cpp  NewFileDlg.h  NewSkinDlg.cpp  ScintillaWnd.cpp  ScintillaWnd.h  SkinView.cpp  SkinView.h  SouiRealWndHandler.cpp
SOUI_gn/source/samples/iectrl/: SDocHostUIHandler.cpp  SDocHostUIHandler.h
SOUI_gn/source/samples/mfc.demo/: ReadMe.txt  RealWndDlg.cpp  SouiRealWndHandler.cpp  stdafx.cpp  stdafx.h
SOUI_gn/source/soui-sys-resource/: BUILD.gn  theme_sys_res.rc2
SOUI_gn/source/third-part/: third-part.pro
SOUI_gn/source/third-part/lua-52/: lua-52.pro
SOUI_gn/source/third-part/mhook/: BUILD.gn  mhook.pro
SOUI_gn/source/third-part/png/: BUILD.gn  CMakeLists.txt  png.pro
SOUI_gn/source/third-part/skia/: BUILD.gn  CMakeLists.txt
SOUI_gn/source/third-part/smiley/: SSmileyCtrl.cpp  smiley.pro
SOUI_gn/source/third-part/zlib/: zlib.pro
SOUI_gn/source/utilities/: BUILD.gn  utilities.pro
SOUI_gn/src/: BUILD.gn
SOUI_gn/src/SOUI/: BUILD.gn  SOUI.pro  soui.rc
SOUI_gn/src/SOUI/include/: SApp.h  soui-version.h  souistd.h
SOUI_gn/src/SOUI/src/: SApp.cpp
SOUI_gn/src/components/: BUILD.gn  com-cfg.h
SOUI_gn/src/components/ScriptModule-LUA/: BUILD.gn
SOUI_gn/src/components/imgdecoder-gdip/: BUILD.gn  imgdecoder-gdip.cpp  (+2 more)
SOUI_gn/src/config/: com-def.h  core_gen.py
SOUI_gn/src/controls.extend/: ExtendCtrls.cpp  ExtendCtrls.h  ExtendSkins.cpp  ExtendSkins.h  GroupChatFrame.cpp  GroupChatFrame.h  SAnimImg.cpp  SAnimImg.h  SButtonEx.cpp  SButtonEx.h  SCalendar2.cpp  SCalendar2.h  SChatEdit.cpp  SChatEdit.h  SChromeTabCtrl.cpp  SChromeTabCtrl.h  SComboBoxEx.cpp  SComboBoxEx.h  SDateTimeEdit.cpp  SDateTimeEdit.h  SDocHostUIHandler.cpp  SDocHostUIHandler.h  SFadeFrame.cpp  SFadeFrame.h  SFlyWnd.cpp  SFreeMoveWindow.cpp  SFreeMoveWindow.h  SIECtrl.cpp  SIECtrl.h  SIPAddressCtrl.cpp  SIPAddressCtrl.h  SImageEx.cpp  SImageEx.h  SImageMaskWnd.cpp  SImageMaskWnd.h  SImagePlayer.cpp  SImagePlayer.h  SItembox.cpp  SItembox.h  SListCtrlEx.cpp  (+39 more)
SOUI_gn/src/demos/: BUILD.gn  CMakeLists.txt
SOUI_gn/src/extend.skins/: ExtendSkins.cpp
SOUI_gn/src/soui-sys-resource/: BUILD.gn  DllMain.cpp  soui-sys-resource.pro  soui-sys-resource.rc  theme_sys_res.rc2
SOUI_gn/src/third-part/: BUILD.gn  CMakeLists.txt
SOUI_gn/src/tools/: BUILD.gn
SOUI_gn/src/utilities/: BUILD.gn
SOUI_gn/src/wizard/: vslist.ini
SOUI_gn/tools/: compile_current_file.py
gndemo/source/app/: BUILD.gn  hello.cc
gndemo/source/misc/: BUILD.gn  colorspace.c  colorspace.h  cpuid.h  dllmain.cpp  emms.c
(+2154 files in other folders)
