
import("//build_overrides/common.gni")

group("components") {
  deps = [
    "imgdecoder-gdip",
    "imgdecoder-png",
    "imgdecoder-stb",
    "imgdecoder-wic",
    "log4z",
    "render-gdi",
    "render-skia",
    "resprovider-zip",
    "resprovider-7zip",
    "ScriptModule-LUA",
    "translator",
  ] 
}