
import("//build_overrides/common.gni")

group("demos") {
  deps = [
    "360demo",
    "360Preview",
    "BaoFeng",
    "demo",
    "BesLyric",
    "mclistview_demo",
    "MultiLangs",
    "QQMain",
    "PCManager",
    "QQLogin",
    "SoTool",
    "souispy",
    "Emoji",
    "setupdll",
    "UiEditor",
  ] 
}