
import("//build_overrides/common.gni")

group("demos") {
  deps = [
    "360",
    "360Preview",
    "BaoFeng",
    "demo",
    "BesLyric",
    "mclistview_demo",
    "MultiLangs",
    "QQMain",
    "PCManager",
    "QQLogin",
    "SoTool",
    "souispy",
    "SMenuBarTest",
    "Emoji",
    "setupdll",
    "UiEditor",
    "TIMDemo",
    "SLogViewer",
    #"SouiEditor",
    "TXMgr",
  ] 
}