import("//build/common.gni")
 

shared_library("soui-sys-resource") {
  configs += [ "//build/config:precompiled_headers" ]
    
  ldflags = ["/NOENTRY"]

  deps = [
    "../utilities", 
  ]


  sources = [
    #include files	
    "soui-sys-resource.rc",
    "resource.h",
  ]

  include_dirs = [
    "./",
    "../../utilities/include",
    "../../SOUI/include", 
  ] 

  defines = [ ]
} 