import("//build_overrides/common.gni")
 

shared_library("soui-sys-resource") {
  #configs += [ "//build/config:precompiled_headers" ]
    
  ldflags = ["/NOENTRY"]

  deps = [
    "../utilities", 
  ]


  sources = [
    #include files	
    "DllMain.cpp",
    "soui-sys-resource.rc",
    "resource.h",
  ]

  include_dirs = [
    "./",
    "../../utilities/include",
    "../../SOUI/include", 
  ] 

  defines = [ ]
} 