import("../../build/app.gni")

 
executable("hello") { 
  configs += [ "//build/config:precompiled_headers" ]
 
  sources = [
    "hello.cc",
  ]

  defines  = [  "BASE_IMPLEMENTATION",
                "ARCH_IS_32BIT",
                "ARCH_IS_IA32",
                "_CRT_NON_CONFORMING_SWPRINTFS",
                "_CRT_SECURE_NO_WARNINGS",
                "__STDC_CONSTANT_MACROS",
                "_DYNAMIC_LOAD_LOG_LIBRARY_",
                "COMPONENT_BUILD", ]

  include_dirs = [
    "..",
    "../static", 
    "../shared", 
    "../misc", 
  ]

  deps = [
    "../misc:misc",
    "../shared:hello_shared",
    "../static:hello_static",
  ]
}
